# MLOps-Skin-Decease

./: .env  .gitignore  Presentation.txt  README.md  compose.yaml  explication.txt  main.py  pyproject.toml
.github/workflows/: ci.yml
airflow/dags/: ingestion_dag.py  train_pipeline_dag.py
docker/: Dockerfile.api  Dockerfile.app  Dockerfile.mlflow
docker/minio/: create-buckets.sh
monitoring/grafana/dashboards/: airflow-overview.json
monitoring/grafana/provisioning/dashboards/: dashboard.yml
monitoring/prometheus/: prometheus.yml
runs/skin5-current/data/: class_index.json
runs/skin5-current/inference/: signature.json
src/data/: dataset_config.yaml  ingest_dataset.py
src/serving/: api_fastapi.py
src/training/: data_utils.py  pipeline_utils.py  train.py
src/webapp/: app_streamlit.py  client.py
tests/: test_dev_env.py  test_ingestion.py  test_pipeline_utils.py  test_training_data_utils.py  test_webapp_client.py
